@@ -1,3 +1,6 @@
+* Thu Jun 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
+- Advance beyond bad changelog entry
+
 * Thu Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
 - Update to Puppet 4 custom function
 - Confine puppet version in metadata.json
